--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -17,4 +18,4 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy to Firebase
-        run: firebase deploy --only hosting --non-interactive --token "${{ secrets.FIREBASE_TOKEN }}"
+        run: firebase deploy --only hosting --project watchlist-2ce12 --non-interactive --token "${{ secrets.FIREBASE_TOKEN }}"
